refactor: ♻️ update API routes and documentation paths
