# app/Http/Controllers/RulesController.php
@@ -15,8 +15,8 @@ class RulesController extends Controller
 {
 
     /**
-     * @OA\Post(
-     *     path="/api/changeRules",
+     * @OA\Put(
+     *     path="/api/rules",
      *     summary="Ajoute ou modifie les droits d'accès pour une fonctionnalité et un rôle",
      *     description="Cette méthode permet à un administrateur d'ajouter ou de modifier les droits d'accès pour une fonctionnalité donnée et un rôle spécifique. Si un droit existe déjà, il sera modifié, sinon il sera créé.",
      *     operationId="changeRules",
@@ -84,45 +84,40 @@ class RulesController extends Controller
             return response()->json(['error' => 'Utilisateur non authentifié'], 401);
         }
 
-        //verifier que l'utilisateur est un admin (table role) role_id = 1
-        if($user->role_id != 1){
+        // Vérifier que l'utilisateur est un admin (table role) role_id = 1
+        if ($user->role_id != 1) {
             return response()->json(['error' => 'Vous n\'avez pas les droits pour accéder à cette ressource'], 403);
         }
 
-        //ajoute ou modifie dans la table droits une nouvelle ligne avec l'id de la fonctionnalité et le role_id, verifier en amont que la fonctionnalité n'a pas de droits deja sinon la modifier si la ligne est deja présente ne rien faire et repondre droit deja existant
-        try{
+        // Ajoute ou modifie dans la table droits une nouvelle ligne avec l'id de la fonctionnalité et le role_id, vérifier en amont que la fonctionnalité n'a pas de droits déjà, sinon la modifier si la ligne est déjà présente
+        try {
             $fonctionnalite = Droit::where('fonctionnalite_id', $request->fonctionnalite_id)->first();
 
-            if(!$fonctionnalite){
-                //create in droit table
+            if (!$fonctionnalite) {
+                // Création dans la table droits
                 $droit = new Droit();
                 $droit->fonctionnalite_id = $request->fonctionnalite_id;
                 $droit->role_id = $request->role_id;
                 $droit->save();
 
                 return response()->json(['result' => 'Droit ajouté'], 200);
-
-            }
-            else
-            {
-                //update in droit table or response droit deja existant
-                $droit = Droit::where('fonctionnalite_id', $request->fonctionnalite_id)->where('role_id', $request->role_id)->first();
-                if($droit){
+            } else {
+                // Mise à jour dans la table droits ou réponse droit déjà existant
+                $droit = Droit::where('fonctionnalite_id', $request->fonctionnalite_id)
+                            ->where('role_id', $request->role_id)
+                            ->first();
+                if ($droit) {
                     return response()->json(['error' => 'Droit déjà existant'], 400);
-                }
-                else
-                {
+                } else {
                     $droit = Droit::where('fonctionnalite_id', $request->fonctionnalite_id)->first();
                     $droit->role_id = $request->role_id;
                     $droit->save();
 
                     return response()->json(['result' => 'Droit modifié'], 200);
-
                 }
             }
 
-        }
-        catch(\Exception $e){
+        } catch (\Exception $e) {
             return response()->json(['error' => 'Erreur lors de la modification des droits '.$e], 500);
         }
     }
