# routes/api.php
@@ -7,47 +7,49 @@ use App\Http\Controllers\HackController;
 use App\Http\Controllers\LogsController;
 use App\Http\Controllers\RulesController;
 
-Route::post('/register', [AuthController::class, 'register']);
+Route::post('/auth/register', [AuthController::class, 'register']);
 
-Route::post('/login', [AuthController::class, 'login']);
+Route::post('/auth/login', [AuthController::class, 'login']);
 
-Route::post('/logout', [AuthController::class, 'logout']);
-
-Route::get('/me', [AuthController::class, 'me']);
+Route::post('/auth/logout', [AuthController::class, 'logout']);
 
 
-
-Route::get('/emailChecker/{email}', [HackController::class, 'emailChecker']);
-
-Route::post('/spam', [HackController::class, 'envoyerEmail']);
-
-Route::post('/check-password', [HackController::class, 'checkPassword']);
-
-Route::get('/passwordGenerator', [HackController::class, 'generatePassword']);
-
-Route::get('/subdomains/{domain}', [HackController::class, 'getSubdomains']);
-
-Route::post('/ddos', [HackController::class, 'ddos']);
-
-Route::get('/generate-identity', [HackController::class, 'generateIdentity']);
-
-Route::post('/phishing', [HackController::class, 'phishing']);
-
-Route::post('/getDataFromPhishing', [HackController::class, 'getDataFromPhishing']);
-
-Route::get('/getRandomPerson', [HackController::class, 'getRandomPerson']);
-
-Route::post('/crawlerInformation', [HackController::class, 'crawlerInformation']);
+Route::get('/user/me', [AuthController::class, 'me']);
 
 
+Route::get('/emails/emailChecker/{email}', [HackController::class, 'emailChecker']);
 
-Route::post('/getLastLogs', [LogsController::class, 'getLastLogs']);
+Route::post('/emails/spam', [HackController::class, 'envoyerEmail']);
 
-Route::post('/getLogsByUser', [LogsController::class, 'getLogsByUser']);
+Route::post('/passwords/check', [HackController::class, 'checkPassword']);
 
-Route::post('/getLogsByFonctionnalite', [LogsController::class, 'getLogsByFonctionnalite']);
+Route::get('/passwords/generate', [HackController::class, 'generatePassword']);
+
+Route::get('/domains/{domain}', [HackController::class, 'getSubdomains']);
+
+Route::post('/attack/ddos', [HackController::class, 'ddos']);
+
+Route::get('/identities/generate', [HackController::class, 'generateIdentity']);
+
+Route::post('/phishing/page', [HackController::class, 'phishing']);
+
+Route::post('/phishing/data', [HackController::class, 'getDataFromPhishing']);
+
+Route::get('/images/random', [HackController::class, 'getRandomPerson']);
+
+Route::post('/identity/crawl', [HackController::class, 'crawlerInformation']);
+
+
+Route::get('/logs/last', [LogsController::class, 'getLastLogs']); // Pour récupérer les derniers logs
+
+Route::get('/logs/user/{userId}', [LogsController::class, 'getLogsByUser']); // Pour récupérer les logs d'un utilisateur spécifique
+
+Route::get('/logs/fonctionnalite/{fonctionnaliteId}', [LogsController::class, 'getLogsByFonctionnalite']); // Pour récupérer les logs liés à une fonctionnalité spécifique
+
+
+Route::put('/rules', [RulesController::class, 'changeRules']);
 
 
 
-Route::post('/changeRules', [RulesController::class, 'changeRules']);
+
 
